<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_interval" 
        android:textSize="@dimen/abc_text_size_title_material"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fromLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/fromEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/lbl_begin"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toLabel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/toEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/lbl_end"
        android:inputType="number" />

    <Button
        android:id="@+id/intervalGenbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_bt_generate" />

</LinearLayout>
